--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "expo": "^41.0.1",
         "expo-barcode-scanner": "~10.1.2",
         "expo-font": "~9.1.0",
+        "expo-permissions": "~12.0.1",
         "jest-react-native": "^18.0.0",
         "randomatic": "^3.1.1",
         "react": "16.13.1",
